added contact details

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ LGPL 2.0
 
 Copyright 2012 University of Southampton and Christopher Gutteridge
 
-
+cjg@ecs.soton.ac.uk
 
 "plus" icon from http://www.gettyicons.com/free-icons/112/must-have/png/24/add_24.png
 "trashcan" from https://eprints.soton.ac.uk/style/images/action_remove.png
