Update README with links to bootstrappy timepicker things

--- a/README
+++ b/README
@@ -8,4 +8,5 @@ cjg@ecs.soton.ac.uk
 
 "plus" icon from http://www.gettyicons.com/free-icons/112/must-have/png/24/add_24.png
 "trashcan" from https://eprints.soton.ac.uk/style/images/action_remove.png
-
+Bootstrap time-picker from https://github.com/jdewit/bootstrap-timepicker
+Minimal bits of Twitter Bootstrap from http://getbootstrap.com
